Feat: return displayName for OneToMany and ManyToMany when there is no subQuery